Avancée sur SAT (ne marche pas encore) et fin du Sokoban